--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "format": "prettier --write .",
     "check-format": "prettier --check .",
     "test-ytdl": "node testYtdl.mjs",
-    "postinstall": "node getLicenses.mjs && node ffmpegDownload.mjs && node tesseractLangDownload.mjs"
+    "postinstall": "node getLicenses.mjs && node ffmpegDownload.mjs && node tesseractLangDownload.mjs",
+    "rollup": "rollup -c --configWorkers" 
   },
   "devDependencies": {
     "@electron/notarize": "^2.1.0",
@@ -54,7 +55,8 @@
     "simple-statistics": "^7.8.3",
     "three": "^0.156.1",
     "tslib": "^2.6.2",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "rosbag": "^4.0.1"
   },
   "dependencies": {
     "check-disk-space": "^3.4.0",
